--- a/Feather/analysis.ipynb
+++ b/Feather/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,21 +22,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data0.txt\", mode='rb') as file: # b is important -> binary\n",
+    "with open(\"DATA2.txt\", mode='rb') as file: # b is important -> binary\n",
     "    fileContent = file.read()\n",
-    "    data_np = np.frombuffer(fileContent,np.uint8)"
+    "    # data_np = np.frombuffer(fileContent,np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_np."
+   ]
   },
   {
    "cell_type": "code",
